# mk-llm

./: .mise.toml  pyproject.toml
configs/: example.json  finetune.json  pretrain.json  train.schema.json
datasets/: .gitignore  check.sh
datasets/260207-alpaca/: download.sh
datasets/260207-openbook-qa/: download.sh
datasets/260207-openwebtext/: download.sh
datasets/260207-tinystories/: download.sh
datasets/260207-wikitext/: download.sh
scripts/: eval_openbookqa.py  infer.py  mix_datasets.py  train.py
src/llm/: __init__.py  config.py  constants.py  model.py  optim.py
src/llm/layers/: __init__.py  attention.py  block.py  ffn.py  norm.py  rope.py
src/llm/utils/: __init__.py  init.py  module.py
training/: .gitignore
training/260207/: PLAN.md  finetune.json  pretrain.json
