[project]
name = "llm"
version = "0.1.0"
description = "RanolP's Tiny Transformer in pure JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]>=0.9.0",
    "jaxtyping>=0.3.7",
    "optax>=0.2.0",
    "safetensors>=0.4.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm"]

[tool.ruff.lint]
ignore = ["F722", "F821"]  # jaxtyping string annotations

